--- a/app/template/_layout.jade
+++ b/app/template/_layout.jade
@@ -5,10 +5,10 @@ include ./_mixin.jade
 html(lang="zh-Hant-TW")
   head
     meta(charset="UTF-8")
-    link(rel="stylesheet", href="/styles/style.css")
-    meta(content="width=device-width, initial-scale=1, maximum-scale=1", name="viewport")
     block title
       title DEMO
+    link(rel="stylesheet", href="styles/style.css")
+    meta(content="width=device-width, initial-scale=1, maximum-scale=1", name="viewport")
   body
     .workspace
       block content
