--- a/app/template/_mixin.jade
+++ b/app/template/_mixin.jade
@@ -1,10 +1,10 @@
 mixin team-icon(name)
   svg
-    use(xlink:href="/images/team-icon.svg##{name}")
+    use(xlink:href="images/team-icon.svg##{name}")
 
 mixin svg-icon(name, klass)
   svg(class=klass)
-    use(xlink:href="/images/svg-icon.svg#icon-#{name}")
+    use(xlink:href="images/svg-icon.svg#icon-#{name}")
 
 mixin sns-facebook(url)
   a.share-btn.share-btn--facebook(href=url, title="分享至 Facebook")
@@ -17,7 +17,7 @@ mixin sns-twitter(url)
 mixin talk-nav__link($type, $programData)
   a.talk-nav__link(
     class="talk-nav__link--#{$type}",
-    href="/talk/#{$programData.program_number_full}.html")
-    .talk-nav__info(style="background-image: url('/images/slider/program#{$programData.program_number_full}_icon.jpg')")
+    href="talk/#{$programData.program_number_full}.html")
+    .talk-nav__info(style="background-image: url('images/slider/program#{$programData.program_number_full}_icon.jpg')")
       span.ib.talk-nav__info__num.pr1= $programData.program_number_full
       span.ib= $programData.program_topic
