修正連結至政問官方

--- a/app/template/_footer.jade
+++ b/app/template/_footer.jade
@@ -16,7 +16,7 @@ footer.footer.text-center
     li.footer-link
       a(href="https://www.facebook.com/talkto.tw/", target="_blank") 前往 Facebook 粉絲團
     li.footer-link
-      a(href="mailto:info@talkto.tw") 寫 Email 給我們
+      a(href="mailto:info@talkto.tw") 寫 Email 給政問
 
   .copyright
     a(href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh_TW")
