--- a/app/template/_slider.jade
+++ b/app/template/_slider.jade
@@ -6,8 +6,8 @@ section.slider.mxa
     .container.vv
       img.logo.logo--index.float-right(src="images/logo/logo.svg", alt="政問 logo", width="102", height="128")
       .share-btns.float-left
-        +sns-facebook('###')
-        +sns-twitter('###')
+        +sns-facebook('http://talkto.tw/')
+        +sns-twitter('http://talkto.tw/')
 
   .slider-body
     each program, index in programs
