為過長的來賓介紹加上 CSS 的限高機制
(有使用魔數，不是很乾淨)
另外也有一行狀況會有點裁字的狀況，先放生...

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -12,6 +12,7 @@
 @import "c-slider";
 @import "c-block";
 @import "c-video";
+@import "c-bio";
 @import "c-polis";
 @import "c-pagination";
 @import "footer";
