內文大字的判斷改為尚無統計資料時 ( 因為目前沒有是否正在 live 的判斷

--- a/app/template/_talk-layout.jade
+++ b/app/template/_talk-layout.jade
@@ -58,7 +58,7 @@ block content
             h4.block__title
               span.title-en intro
               span.title-tw 簡介
-            .block__content(class="#{_isLastTalk ? 'block__content--large' : ''}")
+            .block__content(class="#{!_talk.points && !_talk.polis ? 'block__content--large' : ''}")
               p= _talk.intro
 
         aside.side-content.c-bio
