修正 slider position

--- a/app/styles/_c-slider.scss
+++ b/app/styles/_c-slider.scss
@@ -111,6 +111,11 @@
   }
 }
 
+.program-info--wrapper {
+  position: relative;
+  height: 100%;
+}
+
 .program-info {
   position: absolute;
   bottom: px2rem(18);
