調整 container size

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -14,7 +14,7 @@ $_gutter: px2rem(18);
   }
 
   @include bp-lg--up {
-    max-width: px2rem(1176);
+    max-width: px2rem(1216px);
     padding-left: 3rem;
     padding-right: 3rem;
   }
