設定首頁的內容寬度 (混用 box-sizing ，簡直無法理解這樣的設定 = =; )

--- a/app/styles/_p-intro.scss
+++ b/app/styles/_p-intro.scss
@@ -1,7 +1,11 @@
 // .container.introduce
 .introduce {
   width: 80%;
-  max-width: px2rem(768);
+  box-sizing: content-box;
+
+  &.container {
+    max-width: px2rem(720);
+  }
 
   @include bp-md--up {
     padding-top: 3rem;
