延後數字字型載入時間
改放到頁面最後面再去載字型

--- a/app/template/_scripts.jade
+++ b/app/template/_scripts.jade
@@ -1,2 +1,5 @@
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
 script(src="scripts/app.js")
+link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Montserrat:400,700")
+//- font from talkto.tw
+//- link(rel="stylesheet", href="http://talkto.tw/fonts/398186/EC472EDE7A34CCE37.css")
