--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+// @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import "../../node_modules/normalize-scss/sass/_normalize.scss";
 @include normalize();
 
