加入背景小縮圖，讓主背景圖片感覺更快出來

--- a/app/template/_talk-layout.jade
+++ b/app/template/_talk-layout.jade
@@ -37,7 +37,7 @@ block content
             +talk-nav__link('prev', programs[_talkOrder - 1])
 
         .container.posr
-          .video-cover.full-fill(style="background-image: url('images/slider/program#{_talk.program_number_full}_bg.jpg');")
+          .video-cover.full-fill(style="background-image: url('images/slider/program#{_talk.program_number_full}_bg.jpg'), url('images/slider/program#{_talk.program_number_full}_thumb.jpg');")
             .video-cover__icon-play 精華回顧
           .video-box.mb4.md-mb2.mxa
             .video-placeholder
