在 title 加入 DEMO 字樣

--- a/app/template/_talk-layout.jade
+++ b/app/template/_talk-layout.jade
@@ -2,7 +2,7 @@ extends ../template/_layout.jade
 
 block title
   base(href="../")
-  title #{_talk.title} - #{appInfo.site.name.tw} #{appInfo.site.name.en}
+  title DEMO - #{_talk.title} - #{appInfo.site.name.tw} #{appInfo.site.name.en}
 
 block content
 
