調整 play icon 的垂直置中方式

--- a/app/styles/_c-video.scss
+++ b/app/styles/_c-video.scss
@@ -66,8 +66,9 @@
   &::after {
     content: '';
     position: absolute;
-    top: $_play-size * .5;
+    top: 0;
     left: 50%;
+    margin-top: 50%;
     transform: translate(-33%, -50%);
     border-left: 18px solid;
     border-top: 12px solid transparent;
