--- a/app/template/_slider.jade
+++ b/app/template/_slider.jade
@@ -30,11 +30,12 @@ section.slider.mxa
   .slider-foot.mxa
     .slider-thumbs.list-reset
       each program, index in programs
+        - var bgp = program.bg_position && `background-position: ${program.bg_position};`;
         if program.program_topic
           .slider-thumb(
             data-order=program.program_number_full,
             title="#{program.program_number_full} - #{program.program_topic} || #{program.guest}",
-            style="background-image: url('images/slider/program#{program.program_number_full}_thumb.jpg')")
+            style="background-image: url('images/slider/program#{program.program_number_full}_thumb.jpg'); #{bgp}")
 
   script#slider-btn-tmpl(type="text/tmpl")
     button.slider-btn.slider-prev(aria-label="previous", role="button")
